# RAG_Orchestration

./: .env.template  .gitignore  LICENSE  README.md  debug_issue.py  debug_root_cause.py  docker-compose.yml  main.py  portfoilio_bot.py  pyproject.toml  reingest_fix.py  verify_langchain.py  verify_strict_mode.py
ElevanLabs/: README.md  SETUP_GUIDE.md  docker-compose.yml  main.py  pyproject.toml
ElevanLabs/client/: Dockerfile
ElevanLabs/server/: Dockerfile
backend/: Dockerfile  main.py
backend/services/: rag.py
docs/: ARCHITECTURE.md  PROJECT_OVERVIEW.md
frontend/: Dockerfile  app.py
gateway/: Dockerfile  pyproject.toml
gateway/app/: main.py
graph_rag/: codetotext.py  root_files.txt  visualizer.py
scripts/: verify_deprecation.py  verify_graph_rag.py  verify_hf.py  verify_x_imports.py  x.py
services/graph-rag/: .env.example  Dockerfile  pyproject.toml
services/graph-rag/app/: __init__.py  config.py  controller.py  langchain_processor.py  llm_client.py  main.py  neo4j_connector.py  pdf_processor.py  scraper.py
services/graph-rag/tests/: test_groq_connection.py  test_neo4j_connection.py  test_refactor.py
services/vector-rag/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/vector-rag/app/: main.py
services/vector-rag/app/services/: ingestion.py  prompt.py
services/voice-rag/: .env.example  pyproject.toml
services/voice-rag/client/: Dockerfile  app.py
services/voice-rag/server/: Dockerfile  app.py  prompts.py  rag_service.py
