[project]
name = "rag-with-antigravity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-neo4j>=0.8.0",
    "langchain-openai>=1.1.7",
    "neo4j>=6.1.0",
    "openai>=2.16.0",
    "pathspec>=1.0.4",
    "pypdf>=6.6.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.53.1",
    "tiktoken>=0.12.0",
]
