[project]
name = "graph-rag"
version = "0.1.0"
description = "Knowledge Graph RAG microservice — Neo4j + Groq (Llama-3)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "neo4j>=6.1.0",
    "groq>=0.37.0",
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-neo4j>=0.8.0",
    "langchain-text-splitters>=1.1.0",
    "beautifulsoup4>=4.14.0",
    "pypdf>=6.6.0",
    "requests>=2.32.0",
    "python-multipart>=0.0.20",
]
