[project]
name = "vector-rag"
version = "0.1.0"
description = "Vector RAG microservice — pgvector + FastAPI + Groq"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "groq>=0.37.0",
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=6.6.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=3.0.0",
]
